--- a/index.html
+++ b/index.html
@@ -52,6 +52,20 @@
         text-align: center;
         position: relative;
       }
+      input[type="time"] {
+  padding: 1rem;
+  font-size: 1.1rem;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  margin-bottom: 1rem;
+  width: 100%;
+  height: 3.2rem; /* force enough height */
+  animation: fadeIn 1.2s;
+  -webkit-appearance: none; /* remove iOS default */
+  appearance: none;
+  background: #fff;
+}
+      
       h1 {
         font-family: "Pacifico", cursive;
         font-size: 2.5rem;
