--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="page" id="page6" style="display: none">
         <h1>Thanks, Marika!</h1>
         <p>
-          I can’t wait—please text me here because I can’t see your answers on
+          I can’t wait—please text me because I can’t see your answers on
           this page. 🙃
         </p>
       </div>
